--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "EVAK-0.0.1",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Villanyszerelő árajánlatkészítő",
-  "main": "index.js",
+  "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,10 +11,10 @@
     "url": "git+https://github.com/zoli1228/EVAK-0.0.1.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Zoltan Szollosi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zoli1228/EVAK-0.0.1/issues"
   },
-  "homepage": "https://github.com/zoli1228/EVAK-0.0.1#readme"
+  "homepage": "http://evak.hu/"
 }
