Frontend fejlesztések, admin menü, adatbázis kezelés

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "EVAK-0.0.1",
-  "version": "0.0.1",
-  "description": "Villanyszerelő árajánlatkészítő",
+  "name": "evak",
+  "version": "0.3.1",
+  "description": "Villanyszerelő árajánlatkezelő",
   "main": "js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
